plugins {
    id 'java'
    id 'java-library'
    id 'maven-publish'
}

group = 'com.quantori.qdp'
version = '0.0.9-SNAPSHOT'
description = 'QDP Core'

repositories {
    mavenCentral()
    mavenLocal()
}

compileJava {
    options.release = 16
}

publishing {
    publications {
        maven(MavenPublication) {
            groupId = 'com.quantori.qdp'
            artifactId = 'qdp-core'
            version = '0.0.9-RELEASE'
            from components.java

            repositories {
                maven {
                    name = 'maven-releases'
                    credentials {
                        username = "$mvnUsername"
                        password = "$mvnPassword"
                    }
                    url = "$mvnURL"
                    allowInsecureProtocol = true
                }
            }
        }
    }
}

test {
    useJUnitPlatform()
}


dependencies {
    implementation "com.lightbend.akka.discovery:akka-discovery-aws-api_2.13:1.1.3"
    implementation "com.typesafe.akka:akka-discovery_2.13:2.6.14"
    implementation "com.lightbend.akka.management:akka-management_2.13:1.1.3"
    implementation "com.lightbend.akka.management:akka-management-cluster-bootstrap_2.13:1.1.3"

    implementation 'com.typesafe.akka:akka-actor-typed_2.13:2.6.14'
    implementation 'com.typesafe.akka:akka-slf4j_2.13:2.6.14'
    implementation 'com.typesafe.akka:akka-bom_2.13:2.6.11'
    implementation 'com.typesafe.akka:akka-stream-typed_2.13:2.6.14'
    implementation 'com.typesafe.akka:akka-serialization-jackson_2.13:2.6.14'
    implementation "org.apache.commons:commons-text:1.8"
    implementation 'com.typesafe.akka:akka-cluster-typed_2.13:2.6.14'
    implementation 'javax.validation:validation-api:2.0.1.Final'
    compileOnly 'org.projectlombok:lombok:1.18.20'
    annotationProcessor 'org.projectlombok:lombok:1.18.20'

    testImplementation 'com.typesafe.akka:akka-actor-testkit-typed_2.13:2.6.14'
    testImplementation 'com.typesafe.akka:akka-testkit_2.13:2.6.14'
    testImplementation 'org.mockito:mockito-core:3.9.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.4.2'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.4.2'
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.4.2'
    testImplementation 'org.awaitility:awaitility:4.1.0'

    testImplementation 'ch.qos.logback:logback-classic:1.2.3'
}
